# proxmox-backup-checker

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  MANIFEST.in  PRODUCT.MD  README.MD  STYLEGUIDE.MD  TODO.MD  pyproject.toml  pytest.ini  setup.py
.github/workflows/: python-app.yml
app/: __init__.py  check_backups.py  config.json.example  proxmox_token_test.py  requirements.txt  start.sh
tests/: __init__.py  test_basic.py
